--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ComingSoon - Bootstrap Coming Soon Template</title>
+  <title>Incógnitos FC</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,37 +37,37 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
 
-      <h1>ComingSoon</h1>
-      <h2>We're working hard to improve our website and we'll ready to launch after</h2>
+      <h1>Próximamente</h1>
+      <h2>¡Prepárate para un nuevo capítulo en el mundo del fútbol! Incógnitos Futbol Club se acerca rápidamente. Pronto estarás descubriendo una experiencia futbolística única y emocionante. ¡Mantente al tanto!</h2>
       <div class="countdown d-flex justify-content-center" data-count="2023/12/5">
         <div>
           <h3>%d</h3>
-          <h4>Days</h4>
+          <h4>Días</h4>
         </div>
         <div>
           <h3>%h</h3>
-          <h4>Hours</h4>
+          <h4>Horas</h4>
         </div>
         <div>
           <h3>%m</h3>
-          <h4>Minutes</h4>
+          <h4>Minutos</h4>
         </div>
         <div>
           <h3>%s</h3>
-          <h4>Seconds</h4>
+          <h4>Segundos</h4>
         </div>
       </div>
 
       <div class="subscribe">
-        <h4>Subscribe now to get the latest updates!</h4>
+        <h4>Inscripciones abiertas, deja tu e-mail!</h4>
         <form action="forms/notify.php" method="post" role="form" class="php-email-form">
           <div class="subscribe-form">
             <input type="email" name="email"><input type="submit" value="Subscribe">
           </div>
           <div class="mt-2">
-            <div class="loading">Loading</div>
+            <div class="loading">Cargando</div>
             <div class="error-message"></div>
-            <div class="sent-message">Your notification request was sent. Thank you!</div>
+            <div class="sent-message">Tu información fué enviada con éxito. Gracias!</div>
           </div>
         </form>
       </div>
@@ -90,23 +90,23 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Incógnitos Futbol Club</h2>            
+            <h3>Estamos emocionados de compartir contigo que estamos elaborando una página web completamente renovada y moderna para brindarte la mejor experiencia en línea. Nuestro equipo está trabajando arduamente para diseñar un sitio web intuitivo y fácil de navegar, donde podrás encontrar toda la información relevante sobre nuestra escuela de fútbol.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Mantente atento, ¡pronto estaremos lanzando nuestra nueva página web para que puedas experimentar todo lo que Incógnitos Futbol Club tiene para ofrecer en el mundo digital!
+            </p>
+            <p>
+              Pronto podrás explorar nuestras galerías de fotos y videos, interactuar con nuestro equipo a través de formularios de contacto y obtener respuestas a todas tus preguntas. La página web de Incógnitos Futbol Club será el punto de encuentro virtual para los apasionados del fútbol y aquellos interesados en unirse a nuestra comunidad.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="bi bi-check"></i> Entrenamiento de élite.</li>
+              <li><i class="bi bi-check"></i> Valores fundamentales.</li>
+              <li><i class="bi bi-check"></i> Competición apasionante.</li>
             </ul>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              "En Incógnitos Futbol Club, forjamos campeones dentro y fuera de la cancha. ¡Únete a nosotros y juntos alcanzaremos la grandeza!"
             </p>
           </div>
         </div>
@@ -119,7 +119,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact Us</h2>
+          <h2>Contáctanos</h2>
         </div>
 
         <div class="row justify-content-center">
@@ -130,20 +130,20 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <h4>Lugar:</h4>
+                  <p>Calle 50 Sur 28-03<br>Tunjuelito, Bogotá</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>incognitosfc@gmail.com<br>oscargonzales@gmail.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <h4>Celulares:</h4>
+                  <p>323 945 2478<br>322 779 8049</p>
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar</button></div>
             </form>
           </div>
 
@@ -189,14 +189,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>ComingSoon</span></strong>. All Rights Reserved
+        &copy;Copyright <strong><span>Alpez Developer</span></strong>. Todos los Derechos Reservados
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/comingsoon-free-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Diseñado por <a href="https://alpezdev.com/">AlpezDev</a>
       </div>
     </div>
   </footer><!-- End #footer -->
