--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h4>Segundos</h4>
         </div>
       </div>
-
+      <img src="assets/img/apple-touch-icon.png">
       <div class="subscribe">
         <h4>Inscripciones abiertas, deja tu e-mail!</h4>
         <form action="forms/notify.php" method="post" role="form" class="php-email-form">
